--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   tts_app:
     build: .
@@ -8,4 +6,4 @@ services:
       - "5000:5000"
     volumes:
       - ./data:/app/data
-      - ./data/env/.env:/app/.env
+      - ./data/env:/app/env
